--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         }));
       };
 
-      let calendar = FullCalendar.Calendar(document.getElementById('calendar'), {
+      let calendar = new FullCalendar.Calendar(document.getElementById('calendar'), {
         initialView: 'dayGridMonth',
         locale: 'fr',
         initialDate: new Date().toISOString().slice(0, 10),
