--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Calendrier des Courses (inline)</title>
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
+  <title>Calendrier des Courses (CDN corrigé)</title>
+  <!-- CDN fiable pour FullCalendar -->
+  <link href="https://unpkg.com/@fullcalendar/core@6.1.8/main.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/@fullcalendar/core@6.1.8/main.min.js"></script>
+  <script src="https://unpkg.com/@fullcalendar/daygrid@6.1.8/main.min.js"></script>
+  <script src="https://unpkg.com/@fullcalendar/core@6.1.8/locales/fr.js"></script>
+
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     #filters { margin-bottom: 15px; }
@@ -25,7 +30,7 @@
 
   <div id="calendar"></div>
 
-  <!-- JSON intégré -->
+  <!-- JSON inline -->
   <script>
     const coursesData = [
       {
@@ -44,8 +49,6 @@
     ];
   </script>
 
-  <!-- FullCalendar JS -->
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const filtered = (text = '', type = '') => {
@@ -65,6 +68,7 @@
       const calendar = new FullCalendar.Calendar(calendarEl, {
         initialView: 'dayGridMonth',
         locale: 'fr',
+        plugins: [dayGridPlugin],
         events: filtered(),
         eventClick: function(info) {
           let e = info.event.extendedProps;
